Implemented User Session Management and Subscription Service
- Added /logout route: Deletes user session and refreshToken from cookies upon logout.
- Implemented Refresh Token Rotation: Deletes user refresh token session on new /refresh or /login requests and generates a fresh (AT, RT) pair stored in the session.
- Made session count dynamic: Stored sessionLimitCount with each user to limit the number of sessions.
- Created a Subscription Service: Defined multiple plans (FREE, BASIC, PREMIUM) with access control based on the active subscription plan.
- Integrated @PreAuthorize and custom permission checker methods for role-based access control based on user subscription plan.

Enhances user authentication and session management, ensures secure refresh token handling, and enforces dynamic session limits.